# tradebot

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  deploy.yml
app/: main.py  seed.py  workers.py
app/api/: admin.py  bridge.py  errors.py  health.py  middleware.py  webhooks.py
app/config/: logging.py  settings.py
docs/: RUNNING_PROJECT.md
migrations/: env.py
plans/: 00_MASTER_PLAN.md  01_FOUNDATION_DATABASE_PLAN.md  02_SECURITY_ADMIN_AUTH_PLAN.md  03_TRADINGVIEW_INGESTION_PLAN.md  04_STRATEGY_RISK_PLAN.md  05_ROUTER_TELEGRAM_PLAN.md  06_ADMIN_CONSOLE_PLAN.md  07_HEALTH_MONITORING_OPS_PLAN.md  08_TEST_RELEASE_PLAN.md  09_FUTURE_PHASES_PLAN.md  10_DEV_ENV_PLAN.md  11_AI_FILTER_PLAN.md
scripts/: deploy.sh  release_check.py  schedule_jobs.py  smoke.py  tailwind.sh
specs/: 00_MASTER_SPEC.md  01_RUNTIME_DEPLOY_SPEC.md  02_DATA_SOURCE_SPEC.md  03_STRATEGY_ENGINE_SPEC.md  04_SIGNAL_RISK_SPEC.md  05_TELEGRAM_ROUTER_SPEC.md  06_DATABASE_SPEC.md  07_API_ADMIN_SPEC.md  08_SECURITY_SPEC.md  09_MONITORING_TEST_SPEC.md  10_FUTURE_PHASES_SPEC.md  11_PRODUCT_OPS_SPEC.md  12_ADMIN_CONSOLE_SPEC.md
tests/: conftest.py  test_admin_console.py  test_ai_filter.py  test_alerts.py  test_bridge.py  test_delivery.py  test_demo_mode.py  test_execution.py  test_formatter.py  test_foundation.py  test_milestone_b.py  test_milestone_f.py  test_outcomes.py  test_pipeline_e2e.py  test_rate_limit.py  test_strategy.py  test_strategy_catalog.py  test_strategy_persistence.py  test_tv_signals.py
(+63 files in other folders)
