[project]
name = "tradebot"
version = "0.1.0"
description = "Forex Signal Bot MVP - TradingView bar webhook to Telegram"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "rq>=2.0",
    "rq-scheduler>=0.14",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: needs a live PostgreSQL"]
